# petstore-api-tests

./: .gitignore  README.md  config.py  conftest.py  post_pet.json  pyproject.toml  test_pet.py
requests/: responses.py
tests/: test_pet.py
