[tool.poetry]
name = "petstore-api-tests"
version = "0.1.0"
description = ""
authors = ["evensty <maxim.veselov11@gmail.com>"]
readme = "README.md"
packages = [{include = "petstore_api_tests"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pytest = "^7.2.2"
allure-pytest = "^2.13.1"
curlify = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
